--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -15,7 +15,8 @@
 .first-section-about-header {
   text-align: center;
   color: black;
-  font-size: 30px;
+  font-size: 26px;
+  font-weight: 300;
 }
 
 @media (max-width: 700px) {
@@ -33,6 +34,7 @@
   text-align: justify;
   text-indent: 35px;
   padding: 10px 15px 0px 15px;
+  font-weight: 200;
 }
 
 @media (max-width: 800px) {
@@ -46,8 +48,8 @@
 
 .first-section-about-book-apt {
   text-align: center;
-  margin-top: 80px;
-  margin-bottom: 10px;
+  margin-top: 55px;
+  /* margin-bottom: 10px; */
 }
 
 @media (max-width: 700px) {
@@ -61,7 +63,7 @@
   background-image: url('../images/ananas.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 70vh;
+  min-height: 80vh;
 }
 
 @media (max-width: 760px) {
@@ -77,7 +79,8 @@
   margin-top: 30px;
   text-align: center;
   color: black;
-  font-size: 30px;
+  font-size: 26px;
+  font-weight: 300;
 }
 
 @media (max-width: 700px) {
@@ -100,7 +103,7 @@
   text-align: center;
   color: black;
   font-size: 17px;
-  font-weight: bold;
+  font-weight: 400;
   margin-bottom: 1rem;
 }
 
@@ -108,6 +111,7 @@
   text-align: justify;
   font-size: 17px;
   padding: 15px;
+  font-weight: 300;
 }
 
 .third-section-about {
@@ -134,8 +138,9 @@
 .third-section-about-header {
   padding-top: 10px;
   text-align: center;
-  font-size: 30px;
+  font-size: 26px;
   color: #000;
+  font-weight: 300;
 }
 
 .third-section-about-recommendations {
@@ -144,9 +149,11 @@
   color: black;
   font-size: 17px;
   text-align: justify;
+  font-weight: 400;
 }
 
 .third-section-about-avoid-include {
+  font-weight: 300;
   margin-left: 30px;
 }
 
@@ -155,7 +162,7 @@
   text-align: justify;
   color: #000;
   font-size: 15px;
-  font-weight: bold;
+  font-weight: 400;
 }
 
 .icon-dont {
@@ -185,8 +192,8 @@
   padding-left: 20px;
   padding-right: 20px;
   color: black;
-  font-size: 15px;
-  font-weight: bold;
+  font-size: 17px;
+  font-weight: 400;
   text-align: justify;
   line-height: 25px;
 }
