--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -9,11 +9,11 @@
 }
 
 .contact-header {
-  text-align: left;
+  text-align: center;
   color: black;
   font-size: 26px;
   /* margin-top: 10px; */
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   font-weight: 300;
 }
 
