--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -102,3 +102,27 @@
 .faq-price-super {
   font-weight: 500;
 }
+
+.first-section-faq-book-apt {
+  text-align: center;
+  margin-top: 55px;
+}
+
+@media (max-width: 700px) {
+  .first-section-faq-book-apt {
+    text-align: center;
+    margin-top: 10px;
+  }
+}
+
+.book-apt {
+  border: 1px black solid;
+  padding: 10px;
+  background-color: white;
+}
+
+.book-apt:hover {
+  text-decoration: none;
+  background-color: #7abc52;
+  color: white !important;
+}
