--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -219,6 +219,7 @@
 
 .rating {
   color: gold;
+  padding: 0px 30px;
 }
 
 .review {
@@ -226,7 +227,7 @@
   text-align: justify;
   font-weight: 200;
   color: black;
-  padding: 30px;
+  padding: 0px 30px 10px 30px;
   margin-bottom: 0;
 }
 
@@ -235,7 +236,7 @@
   text-align: right;
   font-weight: 200;
   color: black;
-  padding: 0px 20px;
+  padding: 0px 20px 25px 20px;
 }
 
 .alice-carousel__prev-btn-item {
