--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -16,7 +16,7 @@
 
 .faq {
   text-align: center;
-  background-image: url('../images/lenafaq.jpeg');
+  background-image: url('../images/price.jpeg');
   background-size: contain;
   background-repeat: no-repeat;
   height: auto;
@@ -26,7 +26,7 @@
   .faq {
     margin-top: 10px;
     text-align: center;
-    background-image: url('../images/lenafaq.jpeg');
+    background-image: url('../images/price.jpeg');
     background-size: contain;
     background-repeat: no-repeat;
     height: auto;
