--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -14,6 +14,23 @@
   }
 }
 
+.faq-phone {
+  display: none;
+}
+
+@media (max-width: 769px) {
+  .faq-phone {
+    display: block;
+    margin-top: 10px;
+    text-align: center;
+    background-image: url('../images/price.jpeg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: auto;
+    min-height: 40vh;
+  }
+}
+
 .faq {
   text-align: center;
   background-image: url('../images/price.jpeg');
@@ -24,13 +41,14 @@
 
 @media (max-width: 769px) {
   .faq {
-    margin-top: 10px;
+    display: none;
+    /* margin-top: 10px;
     text-align: center;
     background-image: url('../images/price.jpeg');
     background-size: contain;
     background-repeat: no-repeat;
     height: auto;
-    min-height: 50vh;
+    min-height: 50vh; */
   }
 }
 
@@ -130,7 +148,7 @@
 @media (max-width: 700px) {
   .first-section-faq-book-apt {
     text-align: center;
-    margin-top: 10px;
+    margin-top: 15px;
     margin-bottom: 10px;
   }
 }
